Feature/webapi auth (#2)
* Remove client cert

* WIP - identity and refactor

* Fixing some dependency bugs

* Fixing invalid local reference

* Refactoring GameServer API

* Adding key vault policies

* Tweaks to api contracts

* Adding missing subscription keys

* WIP

* Some playing

* Fixing some app settings

* Adding optional claims

* Adding identifier url to application

* Remove managed identity from policy - should use calling app identity

* Removing old policy token value

* Adding token auth to call to repository web api

* Adding permission scopes

* Adding app role

* Adding some deploy flags

* Update syntax

* Updating build stage

* Adding role assignment

* Refactor and permissions changes

* Trying this..

* Switch to data import

* Fixing resource reference

* Just guessing now really..

* Temp delete application

* Temp remove app settings

* Enable Az AD resources

* Guessing again

* Apparently a service principal is needed?

* Remove custom scope and use app role for MI

* Think I might have this...

* Fixing bug

* Clean-up debugging

* Updating APIs

* Adding test scope assignment

* Fixing some bugs

* Refactor and code cleanup

* Refactor events

* Refactor terraform

* Fixing events openapi schema

* AAD Refactor

* Add logging

* Refactoring
